@@ -1,5 +1,10 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+	Emil Beinroth <emilbeinroth at gmx.net>:
+	- Fixed a small bug regarding -o/-a and atoms with a pattern .. thanks to
+	  leonie for bringing this to my attention.
+	- Added PROVIDE; bumped db-version
+
 *eix-0.5_beta
 
 	Emil Beinroth <emilbeinroth at gmx.net>:
